# GEMS_TCO

./: .gitignore  10_4  Amrel_guide  LICENSE  README.md  copy_gemsdata_to_amarel  deep_learning_cnn_lstm  deep_learning_cnn_lstm.md  errors  errors.md  faiss_env.md  faiss_env.yml  fit_nugget  fit_nugget(test srun sbatch)  install_mypackage_in_amarel  references_domain_knowledge
era5/: era5.csv  (+3 more)
src/: pyproject.toml  setup.py
src/GEMS_TCO/: __init__.py  configuration.py  data_loader.py  data_map_by_hour.py  data_preprocess.py  debiased_whittle.py  debiased_whittle_1111.py  debiased_whittle_2110.py  debiased_whittle_2d_conv.py  debiased_whittle_gpu.py  debiased_whittle_grad_filter.py  debiased_whittle_lat1.py  debiased_whittle_lat1d.py  debiased_whittle_lon1.py  debiased_whittle_mixed.py  debiased_whittle_new.py  debiased_whittle_nolf.py  debiased_whittle_raw.py  download_data.py  evaluate.py  kernel_vecchia_col_batch.py  kernel_vecchia_col_ver2.py  kernel_vecchia_col_ver3.py  kernel_vecchia_col_ver3_fill.py  kernels.py  kernels_250322_copy.py  kernels_columns copy.py  kernels_columns.py  kernels_gpu_past1_deosnt_work.py  kernels_gpu_st_simulation.py  kernels_gpu_st_simulation_column.py  kernels_month.py  kernels_new.py  kernels_no_trend_to_study_covariance_only_020626.py  kernels_nov25.py  kernels_reparam_space_time.py  kernels_reparam_space_time_122125.py  kernels_reparam_space_time_cpu_010126.py  kernels_reparam_space_time_gpu copy_6feature_011026.py  kernels_reparam_space_time_gpu copy_6feature_012126.py  (+50 more)
src/GEMS_TCO.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+2445 files in other folders)
